[package]
name        = "dirs-cli"
version     = "0.0.2"
authors     = ["Simon Ochsenreither <simon@ochsenreither.de>"]
description = "A tiny low-level command line application that provides platform-specific standard locations of directories for config, cache and other data on Linux, Windows, macOS and Redox by leveraging the mechanisms defined by the XDG base/user directory specifications on Linux, the Known Folder API on Windows, and the Standard Directory guidelines on macOS."
readme      = "README.md"
license     = "MPL-2.0"
repository  = "https://github.com/soc/dirs-cli-rs"
maintenance = { status = "actively-developed" }
keywords    = ["xdg", "basedir", "app_dirs", "path", "folder"]

[dependencies]
dirs = "5.0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
] }

                  #   Linux x64        Windows x64        Windows x86
[profile.dev]     #     4200KiB                               5400KiB
[profile.release] #     3600KiB
lto = true        #     1600KiB
codegen-units = 1 #     1600KiB
#panic = "abort"   #     1530KiB
                  # cargo +nightly build -Z build-std=std,panic_abort --target x86_64-unknown-linux-gnu --release
                  #      296KiB
                  # cargo +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu --release
                  #       58KiB
                  #                    cargo +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-pc-windows-gnu --release
                  #                                       cargo +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target i686-pc-windows-gnu --release
# #![no_main] -> no core::fmt
                  #       37KiB
strip = true      #       30KiB              78KiB              37KiB
                  # upx --best --lzma target/x86_64-unknown-linux-gnu/release/dirs-cli
                  #                    upx --best --lzma target/x86_64-pc-windows-gnu/release/dirs-cli.exe
                  #                                       upx --best --lzma target/i686-pc-windows-gnu/release/dirs-cli.exe
                  #       16KiB              28KiB              17KiB
